--- a/client/app/app.component.html
+++ b/client/app/app.component.html
@@ -19,9 +19,23 @@
           <a class="nav-link" routerLink="/" >Home</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" routerLink="/articles">Articles</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" routerLink="/switch">Switch</a>
         </li>
-
+        <li class="nav-item">
+        <a class="nav-link" routerLink="/style">Style</a>
+      </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/observe">Observe</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/async">Async</a>
+        </li>
+        <li class="nav-item">
+        <a class="nav-link" routerLink="/bat">Battery</a>
+      </li>
       </ul>
     </div>
   </div>
