--- a/client/app/battery/battery.component.html
+++ b/client/app/battery/battery.component.html
@@ -9,4 +9,9 @@
 <h2>Your City:</h2>
 {{p.city}}
 
-
+<h2>Your Weather:</h2>
+{{w.weather["0"].description}}
+<h2>Wind Speed:</h2>
+{{w.wind.speed}}
+<h2>Humidity:</h2>
+{{w.main.humidity}}
