--- a/client/app/app.component.html
+++ b/client/app/app.component.html
@@ -36,6 +36,9 @@
         <li class="nav-item">
         <a class="nav-link" routerLink="/bat">Battery</a>
       </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/gen">Genetic</a>
+        </li>
       </ul>
     </div>
   </div>
