--- a/client/app/app.component.html
+++ b/client/app/app.component.html
@@ -28,7 +28,7 @@
         <a class="nav-link" routerLink="/style">Style</a>
       </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/observe">Observe</a>
+          <a class="nav-link" routerLink="/pipes">Pipes</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/async">Async</a>
@@ -37,7 +37,13 @@
         <a class="nav-link" routerLink="/bat">Battery</a>
       </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/gen">Genetic</a>
+          <a class="nav-link" routerLink="/people">People</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/form">Form</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/speakers', {outlets: {'list': ['speakersList'], 'bio': ['none']}}]">Routing</a>
         </li>
       </ul>
     </div>
