--- a/client/app/ngstyle/ngstyle.component.html
+++ b/client/app/ngstyle/ngstyle.component.html
@@ -9,3 +9,5 @@
     {{person.name}} {{person.country}} ({{person.age}})
   </li>
 </ul>
+<div class="card-block" *ngFor="let a of l">
+  <button (click)="history($event)" class="btn btn-success" id="{{a}}">{{a}}</button></div>
