Email Checker added

--- a/client/app/app.component.html
+++ b/client/app/app.component.html
@@ -37,10 +37,16 @@
         <a class="nav-link" routerLink="/bat">Battery</a>
       </li>
         <li class="nav-item">
+          <a class="nav-link" routerLink="/movie">Movies</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" routerLink="/people">People</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/form">Form</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/tester">Tester</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['/speakers', {outlets: {'list': ['speakersList'], 'bio': ['none']}}]">Routing</a>
